Fixed issue with Board title wrap - fixed active button color for projects

--- a/Pages/Boards.razor.css
+++ b/Pages/Boards.razor.css
@@ -34,6 +34,9 @@
     .board-title {
         flex-direction: column;
     }
+    .board-title h3 {
+     font-size:1.5em;
+    }
     .board-container ::deep {
         justify-content: center;
         display: flex;
